<resources>
    <string name="app_name">MyTestApp</string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
</resources>